<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreSummaryHostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#526A89"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="4dp"
                android:text="@string/batsman"
                android:fontFamily="@font/oswaldregular"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:text="@string/runs"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:text="@string/balls"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:text="@string/_4s"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:text="@string/_6s"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:text="@string/sr"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="150dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/player"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:text="@string/bowler"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:text="@string/overs"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:text="@string/madian"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:text="@string/runs"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:text="@string/wickets"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:text="@string/er"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvBowlerName1"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:text="@string/bowler_1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvOversBowler1"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:text="0.0"
                android:textSize="16sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/tvMaidenBowler1"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:layout_marginStart="30dp"
                android:text="@string/zero"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvRunsBowler1"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:layout_marginStart="25dp"
                android:text="@string/zero"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvWicketsBowler1"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:layout_marginStart="25dp"
                android:text="@string/zero"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSRBowler1"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswaldregular"
                android:layout_marginStart="25dp"
                android:text="@string/zero"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>