<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgScreenColor"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgScreenColor">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/oswaldbold"
                android:text="@string/teams_heading"
                android:textSize="30sp"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTeams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtHost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/oswaldregular"
                    android:hint="@string/host_team"
                    android:inputType="text"
                    android:text="" />

                <EditText
                    android:id="@+id/txtVistor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:fontFamily="@font/oswaldregular"
                    android:hint="@string/vistor_team"
                    android:inputType="text"
                    android:text="" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewTeams">

            <TextView
                android:id="@+id/tvToss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/oswaldbold"
                android:text="Toss won by ?"
                android:textSize="30sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewToss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroupToss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioBtnHostToss"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginStart="20dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/oswaldregular"
                        android:text="Host Team" />

                    <RadioButton
                        android:id="@+id/radioBtnVistorToss"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:textSize="16sp"
                        android:layout_marginStart="90dp"
                        android:fontFamily="@font/oswaldregular"
                        android:text="Visitor Team"/>
                </RadioGroup>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewToss">

            <TextView
                android:id="@+id/tvOpted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/oswaldbold"
                android:text="Opted to ?"
                android:textSize="30sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewOpt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroupOpt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioBtnBat"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginStart="20dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/oswaldregular"
                        android:text="Batting" />

                    <RadioButton
                        android:id="@+id/radioBtnBall"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:textSize="16sp"
                        android:layout_marginStart="105dp"
                        android:fontFamily="@font/oswaldregular"
                        android:text="Bowling"/>
                </RadioGroup>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewOpt">

            <TextView
                android:id="@+id/tvOvers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/oswaldbold"
                android:text="Overs ?"
                android:textSize="30sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewOvers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtOvers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/oswaldregular"
                    android:hint="5"
                    android:inputType="number"
                    android:text="" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/main_color"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="Start Match"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewOvers" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>